Pull request #273: WDZO-2294: fixed incorrect work when choosing a value from location and point of sale filters
Squashed commit of the following:

commit 17ce4d21ee438c2e6d9ce3910ea7de14e9a97a91
Author: OUT-Chumayan-BA <BAChumayan@sberbank.ru>
Date:   Fri Jul 23 11:31:47 2021 +0300

    WDZO-2294: fixed incorrect work when choosing a value from location and point of sale filters

--- a/src/containers/ReferenceBooks/Locations/LocationsListFilters/LocationsListFilters.module.css
+++ b/src/containers/ReferenceBooks/Locations/LocationsListFilters/LocationsListFilters.module.css
@@ -18,7 +18,7 @@
 }
 
 .filterItem {
-    width: 220px;
+    width: 300px;
 }
 
 .filterItem:first-child {
